--- a/BussinessLogic/BussinessLogic.csproj
+++ b/BussinessLogic/BussinessLogic.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClsDbExplorer.cs" />
     <Compile Include="ClsServerConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
