--- a/DataSet/DataSet.csproj
+++ b/DataSet/DataSet.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClsConectionString.cs" />
+    <Compile Include="ClsDatabaseExplorer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
